@startuml
'https://plantuml.com/class-diagram

namespace AccuEnergyTest {
interface IServer
interface IClient

IServer <|.up. TCPServer
IClient <|.up. TCPClient

EchoServer --o IServer
EchoServer --* EchoTask

SimpleMemPool --*PoolMemory

EchoTask --o PoolMemory
}

Server --o EchoServer
Server --o TCPServer
Client --o TCPClient
Server << (E,orchid)>>
Client << (E,orchid)>>

@enduml